@@ -10,12 +10,16 @@ Release ?.?
 Release 0.8
 -----------
 
-2009-09-19:
-- Immature plugins have been removed (and moved into feature branch).
+2009-09-21
+- Renamed cursor to query
+- Supporting bind parameters on exec and query
+2009-09-20
 - Added lastInsertID to SQLite3
 - Added tail to SQLite3.Cursor
 - Removed the tail part from the sql property of SQLite3.Cursor
 - Added exec to SQLite3 (supports multiple statements)
+2009-09-19:
+- Immature plugins have been removed (and moved into feature branch).
 
 2009-09-10:
 - Added bash_completion script for flusspferd.
